--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a id="login-link" href="login.html">Login</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>              
+        </nav>
     </header>
+
+    <div id="user-info" style="display: none;">
+        <p id="welcome-message"></p>
+        <button id="logout-button">Logout</button>
+    </div>
 
     <main>
         <section id="home" class="home-section">
@@ -29,7 +34,6 @@
         <section id="menu" class="menu-section">
             <h2>Our Menu</h2>
             <p>Explore our wide variety of baked goods, from fresh breads to delicious cakes.</p>
-            <!-- You can list menu items here -->
         </section>
 
         <section id="about" class="about-section">
@@ -49,7 +53,9 @@
         <p>&copy; 2024 Bakery Delight. All rights reserved.</p>
     </footer>
     <script src="login.js"></script>
-
 </body>
 </html>
+
+
+
 
