--- a/login.html
+++ b/login.html
@@ -7,29 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="welcome-section">
         <h1>Login to Bakery Delight</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
     </header>
+
     <main>
-        <section class="login-form">
+        <div class="login-form">
             <h2>Login</h2>
-            <form action="/submit-login" method="post">
+            <form id="login-form">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
                 <button type="submit">Login</button>
             </form>
-        </section>
+        </div>
     </main>
+
     <footer>
         <p>&copy; 2024 Bakery Delight. All rights reserved.</p>
     </footer>
+    <script src="login.js"></script>
 </body>
 </html>
+
+
+
+
+
