--- a/index.html
+++ b/index.html
@@ -13,18 +13,13 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a id="login-link" href="login.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
+        </nav>              
     </header>
-
-    <div id="user-info" style="display: none;">
-        <p id="welcome-message"></p>
-        <button id="logout-button">Logout</button>
-    </div>
 
     <main>
         <section id="home" class="home-section">
@@ -34,6 +29,7 @@
         <section id="menu" class="menu-section">
             <h2>Our Menu</h2>
             <p>Explore our wide variety of baked goods, from fresh breads to delicious cakes.</p>
+            <!-- You can list menu items here -->
         </section>
 
         <section id="about" class="about-section">
@@ -43,7 +39,7 @@
 
         <section id="contact" class="contact-section">
             <h2>Contact Information</h2>
-            <p>123 Bakery Lane, Sweet City, CA 12345</p>
+            <p>123 VIT, Chennai, India 12345</p>
             <p>Email: contact@bakerydelight.com</p>
             <p>Phone: (123) 456-7890</p>
         </section>
@@ -53,9 +49,7 @@
         <p>&copy; 2024 Bakery Delight. All rights reserved.</p>
     </footer>
     <script src="login.js"></script>
+
 </body>
 </html>
-
-
-
 
